--- a/styles/globals.css
+++ b/styles/globals.css
@@ -207,3 +207,16 @@ margin-top: 15px;
   align-items: center;
   
 }
+.hotelDetailsBooked{
+  border: solid 2px rgb(0, 151, 13);
+  margin-top: 30px;
+  border-radius: 5px;
+}
+.hotelDetailsBookedMain{
+  padding: 10px;
+}
+.hotelMediaButtons{
+  display: flex;
+  justify-content: space-between;
+  min-width: 100%;
+}
