--- a/styles/globals.css
+++ b/styles/globals.css
@@ -220,3 +220,10 @@ margin-top: 15px;
   justify-content: space-between;
   min-width: 100%;
 }
+.loginMain{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 70vh;
+}
