--- a/styles/globals.css
+++ b/styles/globals.css
@@ -227,3 +227,11 @@ margin-top: 15px;
   justify-content: center;
   height: 70vh;
 }
+
+/* Users  Profile Page*/
+
+.ProfileTabsSection{
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
+}
