--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,13 +13,34 @@
   width: 100%;
   background-color: rgb(193, 255, 255);
 }
+
+/* Navigation */
 .navMain {
   width: 100%;
   display: flex;
   justify-content: space-between;
   padding: 15px;
-  background-color: rgb(45, 255, 255);
+  background-color: rgb(255, 255, 255);
   z-index: 10;
+}
+.loginButton{
+  padding: 10px;
+  width: 100px;
+  border-radius: 4px;
+  background-color: white;
+  border: 2px solid #3C6254;
+  color: #3C6254;
+  cursor: pointer;
+}
+.registerButton{
+  padding: 10px;
+  width: 100px;
+  border-radius: 4px;
+  margin-left: 10px;
+  background-color: #3C6254;
+  color: white;
+  border:2px solid #027249;
+  cursor: pointer;
 }
 .navLeft{
   width: 50%;
@@ -40,10 +61,21 @@
   width: 80%;
   height: 60px;
   border-color: white;
-  border: 0.5px solid;
+  border: none ;
   padding: 10px;
-  box-shadow: 10px 5px 4px #888888;
+  box-shadow: 10px 4px 10px #888888;
+  border-radius: 10px 0px 0px 10px;
  
+}
+.searchButton{
+  min-width: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0px 10px 10px 0px;
+  cursor: pointer;
+  background-color: #3C6254;
+  color: aliceblue;
 }
 
 
@@ -284,14 +316,13 @@ margin-top: 15px;
   background: #3C6254;
 }
 
-
-
 button {
   border: none;
   
 }
 .content-tabs {
   flex-grow : 1;
+
 }
 .content {
   background: white;
@@ -347,6 +378,7 @@ button {
   border: #222 1px solid;
   border-radius: 5px;
   margin-top: 10px;
+  
 }
 .tabsContentBookingsMain{
   display: flex; 
