--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,6 +19,7 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 15px;
   background-color: rgb(255, 255, 255);
   z-index: 10;
@@ -54,12 +55,24 @@
 }
 
 .navLeft{
-  width: 50%;
+  width: 30%;
 }
 .navRight{
-  width: 50%;
+  width: 70%;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+}
+.navLinksSection{
+  width: 50%;
+  
+}
+.navLinksLinks{
+  align-items: center;
+  display: flex;
+  list-style: none;
+  margin-left: 10px;
+  justify-content: space-around;
 }
 
 .searchMain{
@@ -284,14 +297,70 @@ margin-top: 15px;
   justify-content: space-between;
   min-width: 100%;
 }
-.loginMain{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 70vh;
+.loginSection{
+ width: 100%;
+ min-height:70vh ;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ 
 }
+.loginMain{
+  
 
+  
+}
+.userNameLoginName{
+  margin-top: 20px;
+}
+.userPasswordLogin{
+  margin-top: 10px;
+}
+.userNameLoginInput{
+  width: 100%;
+  padding: 8px;
+  margin-top: 5px;
+  border-radius: 5px;
+  border: #AFAFAF 2px solid;
+}
+.userPasswordLoginInput{
+  width: 100%;
+  padding: 8px;
+  margin-top: 5px;
+  border-radius: 5px;
+  border: #AFAFAF 2px solid;
+}
+.forgotPasswordLogin{
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 3px;
+  
+}
+.forgotPasswordButton{
+  cursor: pointer;
+  color: #3C6254;
+  background-color: white;
+}
+.loginPageButton{
+  width: 100%;
+  padding: 9px;
+  margin-top: 10px;
+  color: white;
+  background-color: #3C6254;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.loginDontHaveAnAccount{
+  display: flex;
+  margin-top: 10px;
+  justify-content: center;
+}
+.loginDontHaveAnAccountBtn{
+  background-color: white;
+  margin-left: 5px;
+  color: #3C6254;
+  cursor: pointer;
+}
 /* Users  Profile Page*/
 
 .ProfileTabsSection{
