--- a/styles/globals.css
+++ b/styles/globals.css
@@ -76,6 +76,65 @@
   justify-content: space-around;
 }
 
+/* Admin Navigation */
+
+.adminNavSearch{
+  display: flex;
+}
+
+.adminNavSearchInput {
+  padding: 12px;
+  border-radius: 5px 0px 0px 5px;
+  border: 1px solid #9e9e9e;
+  background-color: #fcfcfc;
+}
+
+.adminNavSearchButton{
+  padding: 11px;
+  border-radius: 0px 5px 5px 0px;
+  border: 1px solid #9e9e9e;
+  background-color: #fcfcfc;
+  color: #3C6254;
+  font-size: medium;
+  cursor: pointer;
+}
+/* admin TopTiles */
+
+.adminTopTiles{
+  padding: 10px;
+  margin-top: 15px;
+  
+}
+.adminTopTilesQuickinfo{
+  margin-left: 65px;
+  margin-bottom: 15px;
+}
+.adminTopTilesUl{
+  display: flex;
+  list-style: none;
+  justify-content: space-around;
+}
+
+.adminTopTilesli{
+  background-color: #e0e0e0;
+  min-width: 15%;
+  min-height: 6rem;
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 5px 8px 10px #eeeeee;
+  
+}
+.adminTopTilesliLeft{
+  width: 30%;
+}
+.adminTopTilesliRight{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+/*Main Search Bar  */
 .searchMain{
   display: flex;
   width: 100%;
