--- a/styles/globals.css
+++ b/styles/globals.css
@@ -505,7 +505,7 @@ margin-top: 15px;
   flex-direction: column;
   position: relative;
   width: 70%;
-  height: 50vh;
+  height: 100vh;
   background: #f1f1f1;
   margin: 100px auto 0;
   word-break: break-all;
@@ -636,4 +636,48 @@ button {
 .hotelAdminMainContentDetails{
   min-width: 60%;
   margin-left: 10px;
+}
+
+.addDestination{
+  display: flex;
+  flex-direction: column;
+}
+.addDestinationInput{
+  padding: 5px;
+  border-radius: 5px;
+  margin-top: 3px;
+}
+.addDestinationLabels{
+  margin-top: 5px;
+}
+.addDestinationTagsMain{
+  padding: 5px;
+  background-color: #529c81;
+  min-width: 6%;
+  max-width: 10%;
+  margin-top: 4px;
+  border-radius: 5px;
+}
+
+.addDestinationTags{
+  display: flex;
+}
+.addDestinationImageAddMain{
+  margin-top: 10px;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  
+}
+.addDestinationImageAdd{
+  width: 20%;
+  background-color: #a9ffe0;
+  height: 7em;
+  
+}
+.addDestinationSubmitBtn{
+  margin-top: 10px;
+  padding: 7px;
+  background-color: #34ffb5;
+  border-radius: 5px;
 }
