--- a/styles/globals.css
+++ b/styles/globals.css
@@ -321,6 +321,12 @@ margin: 15px;
   min-width: 25%;
   margin-right: 10px;
 }
+.destinationImageTile{
+  border-radius: 5px;
+  width: 100%;
+  height: 100%;
+  
+}
 .mostVisitedTilesBtm{
   display: flex;
   justify-content: space-between;
@@ -399,12 +405,14 @@ margin: 15px;
 /* Destination Page */
 
 .sliderMain{
-  height: 35vh;
-  background-color: aqua;
+  padding: 2% 5% 0% 6%;
   min-height: 15vh;
+  
   margin-top: 15px;
-  margin-left: 80px;
-  margin-right: 80px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .destDetail{
   width: 100%;
