--- a/styles/globals.css
+++ b/styles/globals.css
@@ -268,6 +268,7 @@ margin: 15px;
 }
 .topCatButtons{
     padding: 15px;
+    width: 10%;
     border-radius: 5px;
     border: none;
 }
@@ -766,7 +767,7 @@ margin-top: 15px;
   flex-direction: column;
   position: relative;
   width: 70%;
-  height: 100vh;
+  height: 115vh;
   background: #f1f1f1;
   margin: 100px auto 0;
   word-break: break-all;
@@ -807,6 +808,25 @@ margin-top: 15px;
   width: calc(100% + 2px);
   height: 5px;
   background: #3C6254;
+}
+.tabsContentBookingsMainViewHotel{
+  padding: 10px;
+  width: 100%;
+  background-color: #027249;
+  border-radius: 5px;
+  color: white;
+  border: 2px solid #027249;
+  cursor: pointer;
+}
+.tabsContentBookingsMainCancel{
+  margin-top: 8px;
+  cursor: pointer;
+  padding: 10px;
+  width: 100%;
+  background-color: #ffffff;
+  border-radius: 5px;
+  border: 2px solid rgb(78, 78, 78);
+  
 }
 
 button {
@@ -871,6 +891,7 @@ button {
   border: #222 1px solid;
   border-radius: 5px;
   margin-top: 10px;
+  min-height: 30vh;
   
 }
 .tabsContentBookingsMain{
@@ -878,7 +899,8 @@ button {
   height: 15vh;
 }
 .tabsContentBookingsMain-Image{
-  width: 12%;
+  width: auto;
+  min-width: 100px;
   background-color: #222;
 }
 .tabsContentBookingsMain-Details{
@@ -938,7 +960,9 @@ button {
 }
 .addDestinationSubmitBtn{
   margin-top: 10px;
-  padding: 7px;
-  background-color: #34ffb5;
+  padding: 12px;
+  cursor: pointer;
+  background-color: #0ca06a;
   border-radius: 5px;
+  color: white;
 }
