--- a/styles/globals.css
+++ b/styles/globals.css
@@ -115,20 +115,75 @@
   justify-content: space-around;
 }
 
-.adminTopTilesli{
+.adminTopTilesli1{
   background-color: #e0e0e0;
-  min-width: 15%;
-  min-height: 6rem;
+  min-width: 17%;
+  min-height: 7rem;
   display: flex;
   align-items: center;
   padding: 10px;
   border-radius: 5px;
-  box-shadow: 5px 8px 10px #eeeeee;
   cursor: pointer;
-  
+  margin-left: 5px;
 }
+
+.adminTopTilesli1 :hover{
+ scale: 1.1;
+ transition: all 1s;
+
+}
+.adminTopTilesli2{
+  background-color: #e0e0e0;
+  min-width: 17%;
+  min-height: 7rem;
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-left: 5px;
+}
+.adminTopTilesli2 :hover{
+  scale: 1.1;
+  transition: all 1s;
+ }
+.adminTopTilesli3{
+  background-color: #e0e0e0;
+  min-width: 17%;
+  min-height: 7rem;
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-left: 5px;
+}
+.adminTopTilesli3 :hover{
+  scale: 1.1;
+  transition: all 1s;
+ }
+.adminTopTilesli4{
+  background-color: #e0e0e0;
+  min-width: 17%;
+  min-height: 7rem;
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-left: 5px;
+}
+.adminTopTilesli4 :hover{
+  scale: 1.1;
+  transition: all 1s;
+ }
 .adminTopTilesliLeft{
-  width: 30%;
+  min-width: 30%;
+  padding: 10px;
+  font-size: x-large;
+  font-weight: 600;
+  
+  
 }
 .adminTopTilesliRight{
   display: flex;
@@ -141,7 +196,10 @@ margin: 15px;
 }
 
 .adminNewHotelSortButton{
+  margin-top: 10px;
   display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .adminNewHotelMainContainer{
@@ -160,7 +218,8 @@ margin: 15px;
   background-color: skyblue;
   padding: 5px;
   display: inline-block;
-  min-height: 7em;
+  height: 8em;
+  min-height: 8em;
 }
 .adminNewHotelMainContentDetails{
   min-width: 70%;
@@ -171,18 +230,94 @@ margin: 15px;
   display: flex;
   flex-direction: column;
 }
+.adminNewHotelMainContentButtonsApprove{
+  padding: 12px;
+  border-radius: 5px;
+  margin-bottom: 5px;
+  background-color: #027249;
+  color: white;
+  cursor: pointer;
+}
+.adminNewHotelMainContentButtonsOk{
+  padding: 12px;
+  border-radius: 5px;
+  margin-bottom: 5px;
+  background-color: #00925d;
+  color: white;
+  cursor: pointer;
+}
+.adminNewHotelMainContentDetailsDetail{
+  margin-bottom: 10px;
+}
+.adminNewHotelMainContentButtonsView{
+  padding: 12px;
+  border-radius: 5px;
+  margin-bottom: 5px;
+  background-color: #414141;
+  color: white;
+  cursor: pointer;
+  
+}
+
+.adminNewHotelMainContentButtonsDelete{
+  padding: 12px;
+  border-radius: 5px;
+  margin-bottom: 5px;
+  background-color: #ffffff;
+  border: 2px solid rgb(255, 170, 170);
+  cursor: pointer;
+}
+
 .adminNewHotelTagsMain{
   display: flex;
   border-radius: 3px;
   margin-left: 10px;
+  width: 100%;
 }
 
 .adminNewHotelTags{
   display: flex;
   border:1px solid #222;
-  min-width: 35px;
-  max-width: 100px;
-  margin-left: 15px;
+  min-width: 100px;
+  max-width: 200px;
+  margin-right: 8px;
+  padding: 5px;
+  border-radius: 4px;
+  
+}
+.adminNewHotelTagsTag{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.adminNewHotelMainTags{
+  display: flex;
+  margin-left: 10px;
+}
+.adminNewHotelTagsTagIcon{
+  padding: 5px;
+}
+.adminNewHotelTagsTagTitle{
+  padding: 5px;
+}
+.adminNewHotelPostedBy{
+  margin-left: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.goToDashBoardButton{
+  padding: 7px;
+  min-width:10% ;
+  margin-left:15px ;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  border-radius: 5px;
+  
+}
+.dashboardIcon{
+  font-size: x-large;
+  margin-right: 10px;
 }
 
 /*Main Search Bar  */
@@ -268,7 +403,7 @@ margin: 15px;
 }
 .topCatButtons{
     padding: 15px;
-    width: 10%;
+    min-width: 10%;
     border-radius: 5px;
     border: none;
 }
@@ -341,21 +476,25 @@ margin: 15px;
   align-items: center;
   justify-content: center;
   top: -210px;
-  left: -35px;
+  left: -30px;
   height: 30px;
   width: 30px;
   border-radius: 50%;
   background-color: white;
  
 }
-@media only screen and (max-width:1115px){
+
+
+
+
+@media only screen and (max-width:1100px){
   .likeButton{
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
     top: -210px;
-    left: -10px;
+    left: -30px;
     height: 30px;
     width: 30px;
     border-radius: 50%;
@@ -363,14 +502,49 @@ margin: 15px;
    
   }
 }
-@media only screen and (max-width:990px){
+
+@media only screen and (max-width:1370px){
   .likeButton{
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
-    top: -205px;
-    left: -15px;
+    top: -210px;
+    left: -40px;
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    background-color: white;
+   
+  }
+}
+
+@media only screen and (min-width:1340px){
+  .likeButton{
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top: -210px;
+    left: -55px;
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    background-color: white;
+   
+  }
+}
+
+
+
+@media only screen and (min-width:1710px){
+  .likeButton{
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top: -210px;
+    left: -95px;
     height: 30px;
     width: 30px;
     border-radius: 50%;
@@ -906,6 +1080,9 @@ button {
 .tabsContentBookingsMain-Details{
   margin-left: 20px;
   width: 75%;
+}
+.profileViewDestination{
+  margin-bottom: 10px;
 }
 
 /* hotel admin */
