--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,9 @@
   margin: 0;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap');
+
+
 /* Home Page */
 .hero{
   color: tomato;
@@ -396,6 +399,7 @@ margin: 15px;
 }
 
 .topCatMain{
+  font-family: "rubik",sans-serif;
   margin-top: 50px;
   display: flex;
   justify-content: space-around;
@@ -467,6 +471,7 @@ margin: 15px;
   display: flex;
   justify-content: space-between;
   width: 90%;
+  min-width: 90%;
   
 }
 
@@ -787,8 +792,22 @@ margin-top: 15px;
   margin-top: 5px;
   border-radius: 3px;
   cursor: pointer;
+  width: 17%;
 }
-
+.datePicker{
+  margin-top: 10px;
+}
+.paymentMethodDivs{
+  display: flex;
+  justify-content: space-between;
+  border: 0.5px solid rgb(110, 110, 110);
+  padding: 5px;
+  margin-top: 3px;
+  border-radius: 5px;
+}
+.paymentMethodSection{
+  width: 50%;
+}
 .guestDetails{
   margin-top: 15px;
   display: flex;
