design updated checkbox

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -826,9 +826,14 @@
 }
 
 .checkoutContainerImage {
-    height: 30vh;
+    max-height: 50vh;
+    min-height: 10vh;
     width: 100%;
-    background-color: #027249;
+
+}
+.checkoutContainerImageImage{
+    max-height: 50vh;
+    min-height: 10vh;
 }
 
 .checkoutContainerHotelName {
@@ -849,7 +854,7 @@
 }
 
 .checkoutPaymentType {
-    width: 15%;
+    width: 100%;
 }
 
 .checkoutPaymentTypeWays {
@@ -874,13 +879,13 @@
     display: flex;
     justify-content: space-between;
     border: 0.5px solid rgb(110, 110, 110);
-    padding: 5px;
+    
     margin-top: 3px;
     border-radius: 5px;
 }
 
 .paymentMethodSection {
-    width: 50%;
+    width: 100%;
 }
 
 .guestDetails {
